// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LadderPage renders the empty state 1`] = `
<div
  className="m-ladder-page"
>
  <div
    className="m-picker-container m-picker-container--narrow visible"
  >
    <div
      className="m-picker-container__tab"
    >
      <button
        className="m-picker-container__tab-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <div
      className="m-route-picker"
    >
      <ul
        className="m-route-picker__selected-routes"
      />
      <div
        className="m-route-filter"
      >
        <select
          className="m-route-filter__type"
          onChange={[Function]}
          value="id"
        >
          <option
            value="id"
          >
            Route ID
          </option>
        </select>
        <div
          className="m-route-filter__text"
        >
          <input
            className="m-route-filter__input"
            onChange={[Function]}
            onKeyDown={[Function]}
            type="text"
            value=""
          />
          <button
            className="m-route-filter__clear"
            onClick={[Function]}
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </button>
        </div>
      </div>
      loading...
    </div>
  </div>
  <div
    className="m-route-ladders"
  />
</div>
`;

exports[`LadderPage renders with routes 1`] = `
<div
  className="m-ladder-page"
>
  <div
    className="m-picker-container m-picker-container--narrow visible"
  >
    <div
      className="m-picker-container__tab"
    >
      <button
        className="m-picker-container__tab-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <div
      className="m-route-picker"
    >
      <ul
        className="m-route-picker__selected-routes"
      >
        <li>
          <button
            className="m-route-picker__selected-routes-button"
            onClick={[Function]}
          >
            1
          </button>
        </li>
      </ul>
      <div
        className="m-route-filter"
      >
        <select
          className="m-route-filter__type"
          onChange={[Function]}
          value="id"
        >
          <option
            value="id"
          >
            Route ID
          </option>
        </select>
        <div
          className="m-route-filter__text"
        >
          <input
            className="m-route-filter__input"
            onChange={[Function]}
            onKeyDown={[Function]}
            type="text"
            value=""
          />
          <button
            className="m-route-filter__clear"
            onClick={[Function]}
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </button>
        </div>
      </div>
      <ul
        className="m-route-picker__route-list"
      >
        <li>
          <button
            className="m-route-picker__route-list-button m-route-picker__route-list-button--selected"
            onClick={[Function]}
          >
            1
          </button>
        </li>
        <li>
          <button
            className="m-route-picker__route-list-button m-route-picker__route-list-button--unselected"
            onClick={[Function]}
          >
            28
          </button>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="m-route-ladders"
  >
    <div
      className="m-route-ladder__header"
    >
      <button
        className="m-close-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
      <div
        className="m-route-ladder__route-name"
      >
        1
      </div>
    </div>
    <div
      className="m-route-ladder__controls"
    >
      <button
        className="m-route-ladder__reverse"
        onClick={[Function]}
      >
        <span
          className="m-route-ladder__reverse-icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        Reverse
      </button>
    </div>
    loading...
  </div>
</div>
`;

exports[`LadderPage renders with selectedRoutes in different order than routes data 1`] = `
<div
  className="m-ladder-page"
>
  <div
    className="m-picker-container m-picker-container--narrow visible"
  >
    <div
      className="m-picker-container__tab"
    >
      <button
        className="m-picker-container__tab-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <div
      className="m-route-picker"
    >
      <ul
        className="m-route-picker__selected-routes"
      >
        <li>
          <button
            className="m-route-picker__selected-routes-button"
            onClick={[Function]}
          >
            28
          </button>
        </li>
        <li>
          <button
            className="m-route-picker__selected-routes-button"
            onClick={[Function]}
          >
            1
          </button>
        </li>
      </ul>
      <div
        className="m-route-filter"
      >
        <select
          className="m-route-filter__type"
          onChange={[Function]}
          value="id"
        >
          <option
            value="id"
          >
            Route ID
          </option>
        </select>
        <div
          className="m-route-filter__text"
        >
          <input
            className="m-route-filter__input"
            onChange={[Function]}
            onKeyDown={[Function]}
            type="text"
            value=""
          />
          <button
            className="m-route-filter__clear"
            onClick={[Function]}
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </button>
        </div>
      </div>
      <ul
        className="m-route-picker__route-list"
      >
        <li>
          <button
            className="m-route-picker__route-list-button m-route-picker__route-list-button--selected"
            onClick={[Function]}
          >
            1
          </button>
        </li>
        <li>
          <button
            className="m-route-picker__route-list-button m-route-picker__route-list-button--selected"
            onClick={[Function]}
          >
            28
          </button>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="m-route-ladders"
  >
    <div
      className="m-route-ladder__header"
    >
      <button
        className="m-close-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
      <div
        className="m-route-ladder__route-name"
      >
        28
      </div>
    </div>
    <div
      className="m-route-ladder__controls"
    >
      <button
        className="m-route-ladder__reverse"
        onClick={[Function]}
      >
        <span
          className="m-route-ladder__reverse-icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        Reverse
      </button>
    </div>
    loading...
    <div
      className="m-route-ladder__header"
    >
      <button
        className="m-close-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
      <div
        className="m-route-ladder__route-name"
      >
        1
      </div>
    </div>
    <div
      className="m-route-ladder__controls"
    >
      <button
        className="m-route-ladder__reverse"
        onClick={[Function]}
      >
        <span
          className="m-route-ladder__reverse-icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        Reverse
      </button>
    </div>
    loading...
  </div>
</div>
`;

exports[`LadderPage renders with timepoints 1`] = `
<div
  className="m-ladder-page"
>
  <div
    className="m-picker-container m-picker-container--narrow visible"
  >
    <div
      className="m-picker-container__tab"
    >
      <button
        className="m-picker-container__tab-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <div
      className="m-route-picker"
    >
      <ul
        className="m-route-picker__selected-routes"
      />
      <div
        className="m-route-filter"
      >
        <select
          className="m-route-filter__type"
          onChange={[Function]}
          value="id"
        >
          <option
            value="id"
          >
            Route ID
          </option>
        </select>
        <div
          className="m-route-filter__text"
        >
          <input
            className="m-route-filter__input"
            onChange={[Function]}
            onKeyDown={[Function]}
            type="text"
            value=""
          />
          <button
            className="m-route-filter__clear"
            onClick={[Function]}
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </button>
        </div>
      </div>
      <ul
        className="m-route-picker__route-list"
      >
        <li>
          <button
            className="m-route-picker__route-list-button m-route-picker__route-list-button--unselected"
            onClick={[Function]}
          >
            1
          </button>
        </li>
        <li>
          <button
            className="m-route-picker__route-list-button m-route-picker__route-list-button--unselected"
            onClick={[Function]}
          >
            28
          </button>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="m-route-ladders"
  />
</div>
`;

exports[`LadderPage renders with vehicles and selected vehicles 1`] = `
<div
  className="m-ladder-page"
>
  <div
    className="m-picker-container m-picker-container--narrow visible"
  >
    <div
      className="m-picker-container__tab"
    >
      <button
        className="m-picker-container__tab-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <div
      className="m-route-picker"
    >
      <ul
        className="m-route-picker__selected-routes"
      >
        <li>
          <button
            className="m-route-picker__selected-routes-button"
            onClick={[Function]}
          >
            1
          </button>
        </li>
      </ul>
      <div
        className="m-route-filter"
      >
        <select
          className="m-route-filter__type"
          onChange={[Function]}
          value="id"
        >
          <option
            value="id"
          >
            Route ID
          </option>
        </select>
        <div
          className="m-route-filter__text"
        >
          <input
            className="m-route-filter__input"
            onChange={[Function]}
            onKeyDown={[Function]}
            type="text"
            value=""
          />
          <button
            className="m-route-filter__clear"
            onClick={[Function]}
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </button>
        </div>
      </div>
      <ul
        className="m-route-picker__route-list"
      >
        <li>
          <button
            className="m-route-picker__route-list-button m-route-picker__route-list-button--selected"
            onClick={[Function]}
          >
            1
          </button>
        </li>
        <li>
          <button
            className="m-route-picker__route-list-button m-route-picker__route-list-button--unselected"
            onClick={[Function]}
          >
            28
          </button>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="m-route-ladders"
  >
    <div
      className="m-route-ladder__header"
    >
      <button
        className="m-close-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
      <div
        className="m-route-ladder__route-name"
      >
        1
      </div>
    </div>
    <div
      className="m-route-ladder__controls"
    >
      <button
        className="m-route-ladder__reverse"
        onClick={[Function]}
      >
        <span
          className="m-route-ladder__reverse-icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        Reverse
      </button>
    </div>
    loading...
  </div>
  <div
    className="m-properties-panel"
    id="m-properties-panel"
  >
    <div
      className="m-ghost-properties-panel"
    >
      <div
        className="m-properties-panel__header"
      >
        <div
          className="m-properties-panel__label"
        >
          <svg
            style={
              Object {
                "height": 64,
                "width": 64,
              }
            }
            viewBox="-32 -20 64 64"
          >
            <g
              className="m-vehicle-icon m-vehicle-icon--large ghost"
            >
              <rect
                className="m-vehicle-icon__label-background"
                height={24}
                rx={12}
                ry={12}
                width={64}
                x={-32}
                y={19}
              />
              <text
                className="m-vehicle-icon__label m-vehicle-icon__label--normal"
                dominantBaseline="central"
                textAnchor="middle"
                x="0"
                y={31}
              >
                N/A
              </text>
              <g
                transform="scale(0.7) translate(-24,-23)"
              >
                <path
                  className="m-vehicle-icon__ghost-highlight"
                  d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
                  stroke-join="round"
                />
                <path
                  className="m-vehicle-icon__ghost-body"
                  d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
                  stroke-join="round"
                />
                <ellipse
                  className="m-vehicle-icon__ghost-eye"
                  cx="19.73"
                  cy="22.8"
                  rx="3.11"
                  ry="3.03"
                />
                <ellipse
                  className="m-vehicle-icon__ghost-eye"
                  cx="35.29"
                  cy="22.8"
                  rx="3.11"
                  ry="3.03"
                />
              </g>
            </g>
          </svg>
        </div>
        <div
          className="m-properties-panel__variant"
        >
          <div
            className="m-properties-panel__inbound-outbound"
          >
            Outbound
          </div>
          <div
            className="m-route-variant-name"
          >
            <span
              className="m-route-variant-name__route-id"
            >
              1_
            </span>
             headsign
          </div>
        </div>
        <button
          className="m-close-button"
          onClick={[Function]}
        >
          <span
            className=""
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </button>
      </div>
      <div
        className="m-properties-list"
      >
        <table
          className="m-properties-list__table"
        >
          <tbody>
            <tr>
              <td
                className="m-properties-list__property-label"
              >
                Run
              </td>
              <td
                className="m-properties-list__property-value"
              >
                Not Available
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <button
      className="m-properties-panel__close-button"
      onClick={[Function]}
    >
      Close
    </button>
  </div>
  <div
    className="m-properties-panel__modal-overlay"
    onClick={[Function]}
  />
</div>
`;
